<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#000000"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:radius="20dp"
        tools:ignore="TextSizeCheck">

        <!-- Title -->
        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cadastro" />

        <!-- Subtitle -->
        <TextView
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_cadastro" />

        <!-- Form Inputs -->
        <LinearLayout
            style="@style/FormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Name Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNome"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@drawable/edit_text_cadastro"
                android:hint="@string/form_name_hint"
                android:inputType="textPersonName" />

            <!-- Email Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_cadastro"
                android:hint="@string/form_email_hint"
                android:inputType="textEmailAddress" />

            <!-- Phone Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_telefone"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTelefone"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@drawable/edit_text_cadastro"
                android:hint="@string/form_telefone_hint"
                android:inputType="phone" />

            <!-- Password Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextSenha"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edit_text_cadastro"
                android:hint="@string/form_password_hint"
                android:inputType="textPassword" />

            <!-- Confirm Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_confirm_password"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextConfirmarSenha"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="newPassword"
                android:background="@drawable/edit_text_cadastro"
                android:hint="@string/form_confirm_password_hint"
                android:inputType="textPassword" />

        </LinearLayout>

        <!-- Register Link -->
        <TextView
            android:id="@+id/textLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/link_login"
            android:textColor="#5B5D63"
            android:textSize="12sp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#0043EF"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/button_cadastrar"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
