<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#000000">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="375dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="TextSizeCheck">

        <!-- Title -->
        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title" />

        <!-- Subtitle -->
        <TextView
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textAlignment="center" />

        <!-- Form Inputs -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Email Input -->
            <TextView
                android:id="@+id/textEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/label_email"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/TextInputStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_login"
                android:hint="@string/form_email_hint"
                android:inputType="textEmailAddress" />

            <!-- Password Input -->
            <TextView
                android:id="@+id/textPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/label_password"
                android:textColor="#0043EF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/TextInputStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edit_text_login"
                android:hint="@string/form_password_hint"
                android:inputType="textPassword" />

        </LinearLayout>

        <!-- Register Link -->
        <TextView
            android:id="@+id/textRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:text="@string/register_link"
            android:textColor="#5B5D63"
            android:textSize="12sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#0043EF"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
