<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/item_produto.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/productImage1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_foreground"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/productTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto_iphone_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/productSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto_iphone_subtitle" />

    <TextView
        android:id="@+id/productPrice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto_iphone_price" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconFavoritar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorito"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iconCarrinho1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"
            android:src="@drawable/carrinho" />
    </LinearLayout>
</LinearLayout>
